--- a/web/templates/badge/all_badges.html
+++ b/web/templates/badge/all_badges.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load badge_filters %}
+{% load badge_tags %}
 
 {% block main_content %}
 <div class="container-xxl flex-grow-1 container-p-y">
